--- a/GeometryLib/GeometryLib.vcxproj
+++ b/GeometryLib/GeometryLib.vcxproj
@@ -143,16 +143,20 @@
   <ItemGroup>
     <ClInclude Include="inc\BaseGeometry.h" />
     <ClInclude Include="inc\Box.h" />
+    <ClInclude Include="inc\Cone.h" />
     <ClInclude Include="inc\Cylinder.h" />
     <ClInclude Include="inc\Geometry.hpp" />
+    <ClInclude Include="inc\Snout.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseGeometry.cpp" />
     <ClCompile Include="Box.cpp" />
+    <ClCompile Include="Cone.cpp" />
     <ClCompile Include="Cylinder.cpp" />
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Snout.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
