--- a/GeometryLib/GeometryLib.vcxproj
+++ b/GeometryLib/GeometryLib.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="inc\Cone.h" />
     <ClInclude Include="inc\Cylinder.h" />
     <ClInclude Include="inc\Geometry.hpp" />
+    <ClInclude Include="inc\Pyramid.h" />
     <ClInclude Include="inc\Snout.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -156,6 +157,7 @@
     <ClCompile Include="Cone.cpp" />
     <ClCompile Include="Cylinder.cpp" />
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Pyramid.cpp" />
     <ClCompile Include="Snout.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
