--- a/GeometryLib/GeometryLib.vcxproj
+++ b/GeometryLib/GeometryLib.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="inc\Geometry.hpp" />
     <ClInclude Include="inc\Pyramid.h" />
     <ClInclude Include="inc\Snout.h" />
+    <ClInclude Include="inc\Sphere.h" />
     <ClInclude Include="inc\Wedge.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -160,6 +161,7 @@
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Pyramid.cpp" />
     <ClCompile Include="Snout.cpp" />
+    <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
