--- a/GeometryLib/GeometryLib.vcxproj.filters
+++ b/GeometryLib/GeometryLib.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="inc\Ellipsoid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\SCylinder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Ellipsoid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SCylinder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
