--- a/GeometryLib/GeometryLib.vcxproj
+++ b/GeometryLib/GeometryLib.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="inc\Ellipsoid.h" />
     <ClInclude Include="inc\Geometry.hpp" />
     <ClInclude Include="inc\Pyramid.h" />
+    <ClInclude Include="inc\RectCirc.h" />
     <ClInclude Include="inc\SCylinder.h" />
     <ClInclude Include="inc\Snout.h" />
     <ClInclude Include="inc\Sphere.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="Ellipsoid.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Pyramid.cpp" />
+    <ClCompile Include="RectCirc.cpp" />
     <ClCompile Include="SCylinder.cpp" />
     <ClCompile Include="Snout.cpp" />
     <ClCompile Include="Sphere.cpp" />
