--- a/GeometryLib/GeometryLib.vcxproj.filters
+++ b/GeometryLib/GeometryLib.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="inc\SCylinder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\RectCirc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -93,6 +96,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SCylinder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RectCirc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
