--- a/GeometryLib/GeometryLib.vcxproj.filters
+++ b/GeometryLib/GeometryLib.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="inc\RectCirc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\Saddle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -99,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RectCirc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Saddle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
