--- a/GeometryLib/GeometryLib.vcxproj
+++ b/GeometryLib/GeometryLib.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="inc\Cylinder.h" />
     <ClInclude Include="inc\Ellipsoid.h" />
     <ClInclude Include="inc\Geometry.hpp" />
+    <ClInclude Include="inc\Prism.h" />
     <ClInclude Include="inc\Pyramid.h" />
     <ClInclude Include="inc\RectCirc.h" />
     <ClInclude Include="inc\Saddle.h" />
@@ -164,6 +165,7 @@
     <ClCompile Include="Cylinder.cpp" />
     <ClCompile Include="Ellipsoid.cpp" />
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Prism.cpp" />
     <ClCompile Include="Pyramid.cpp" />
     <ClCompile Include="RectCirc.cpp" />
     <ClCompile Include="Saddle.cpp" />
