--- a/GeometryLib/GeometryLib.vcxproj.filters
+++ b/GeometryLib/GeometryLib.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="inc\Saddle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\Prism.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Saddle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Prism.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
