--- a/GeometryLib/GeometryLib.vcxproj
+++ b/GeometryLib/GeometryLib.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="inc\BaseGeometry.h" />
     <ClInclude Include="inc\Box.h" />
     <ClInclude Include="inc\CircularTorus.h" />
+    <ClInclude Include="inc\CombineGeometry.h" />
     <ClInclude Include="inc\Cone.h" />
     <ClInclude Include="inc\Cylinder.h" />
     <ClInclude Include="inc\Ellipsoid.h" />
@@ -164,6 +165,7 @@
     <ClCompile Include="BaseGeometry.cpp" />
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="CircularTorus.cpp" />
+    <ClCompile Include="CombineGeometry.cpp" />
     <ClCompile Include="Cone.cpp" />
     <ClCompile Include="Cylinder.cpp" />
     <ClCompile Include="Ellipsoid.cpp" />
