--- a/GeometryLib/GeometryLib.vcxproj.filters
+++ b/GeometryLib/GeometryLib.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="inc\RectangularTorus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\CombineGeometry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -123,6 +126,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RectangularTorus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CombineGeometry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
