添加DynamicLOD，用于对体元进行动态裁减，以及动态更新剖分数

--- a/GeometryLib/GeometryLib.vcxproj
+++ b/GeometryLib/GeometryLib.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="inc\CombineGeometry.h" />
     <ClInclude Include="inc\Cone.h" />
     <ClInclude Include="inc\Cylinder.h" />
+    <ClInclude Include="inc\DynamicLOD.h" />
     <ClInclude Include="inc\Ellipsoid.h" />
     <ClInclude Include="inc\Geometry.hpp" />
     <ClInclude Include="inc\Prism.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="CombineGeometry.cpp" />
     <ClCompile Include="Cone.cpp" />
     <ClCompile Include="Cylinder.cpp" />
+    <ClCompile Include="DynamicLOD.cpp" />
     <ClCompile Include="Ellipsoid.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Prism.cpp" />
