--- a/GeometryLib/GeometryLib.vcxproj.filters
+++ b/GeometryLib/GeometryLib.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="inc\CombineGeometry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\DynamicLOD.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -129,6 +132,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CombineGeometry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DynamicLOD.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
