--- a/GeometryLib/GeometryLib.vcxproj
+++ b/GeometryLib/GeometryLib.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="inc\SCylinder.h" />
     <ClInclude Include="inc\Snout.h" />
     <ClInclude Include="inc\Sphere.h" />
+    <ClInclude Include="inc\ViewCenterManipulator.h" />
     <ClInclude Include="inc\Wedge.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -185,6 +186,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="ViewCenterManipulator.cpp" />
     <ClCompile Include="Wedge.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
